service - learning-service - reformat code